@@ -8,6 +8,7 @@ CCPIC = @CCPIC@
 CPPFLAGS = @CPPFLAGS@
 DEFS = @DEFS@
 LDFLAGS = @LDFLAGS@
+ASM_FLAGS = @ASM_FLAGS@
 LIBS = @LIBS@
 LIBOBJS = @LIBOBJS@
 EMULATOR = @EMULATOR@
